# bipedal_project

./: CMakeLists.txt  README.md
bipedal_demo/: bipedalSimul.cpp
bipedal_ui/bipedal_gui/: CMakeLists.txt
bipedal_ui/bipedal_gui/include/bipedal_gui/: mainwindow.ui
bipedal_ui/bipedal_gui/src/: main.cpp
dongju_urdf/one_leggedv1/: one_leggedrobot.urdf
dongju_urdf/serial_4bar/meshes/: base_link.STL  link2.STL  link3.STL  link4.STL
dongju_urdf/serial_4bar/urdf/: urdf_file.csv  urdf_file.urdf
urdf_example/: CMakeLists.txt  urdf_ex.cpp
